# dingo-waveform

./: .coverage  .gitignore  API_UPDATE_SUMMARY.md  CLI_TOOL_SUMMARY.md  COMPARISON_SUMMARY.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  CONFIGURATION_COMPATIBILITY.md  FAIR_PARALLEL_COMPARISON.md  FINAL_BENCHMARK_VERIFICATION.md  FINAL_SUMMARY.md  FIX_RESULTS.md  FUNCTIONAL_GAP_ANALYSIS.md  FUNCTION_COVERAGE_ANALYSIS.md  F_MIN_F_MAX_VERIFICATION.md  MODES_VS_POLARIZATIONS.md  MODE_VERIFICATION_SUMMARY.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  OVERHEAD_ANALYSIS_AND_PROPOSALS.md  PARALLEL_OPTIMIZATION_ANALYSIS.md  PARALLEL_OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FINDINGS_SUMMARY.md  PHASE1_OPTIMIZATION_RESULTS.md  PHASE2_OPTIMIZATION_RESULTS.md  PORTING_GAP_ANALYSIS.md  README.md  REDESIGNED_TESTS_SUMMARY.md  TEST_MIGRATION_COMPLETE.md  TYPE_ALIAS_IMPROVEMENTS.md  config.json  demonstrate_logging_issue.py  detailed_profile.py  mkdocs.yml  mypy.ini  profile_benchmark.py  pyproject.toml  pytest.ini  test_plotting.py
dingo_waveform/: _version.py  approximant.py  binary_black_holes.py  binary_black_holes_parameters.py  cli.py  cli_batch.py  compare.py  comparison.py  dataset.py  dataset_generation_cli.py  domains.py  domains_new.py  generate_fd_modes.py  generate_fd_modes_LO.py  generate_td_modes.py  generate_td_modes_LO.py  generate_td_modes_LO_cond_extra_time.py  gw_signals_parameters.py  gwutils.py  imports.py  inspiral_choose_fd_modes.py  inspiral_choose_td_modes.py  inspiral_fd.py  inspiral_td.py  lal.save  lal_params.py  logging.py  logs.py  main.py  plotting_cli.py  polarizations.py  prior.py  spins.py  test.py  types.py  waveform.py  waveform_generator.py  waveform_generator_parameters.py  waveform_parameters.py  wfg_utils.py
dingo_waveform/comparison/: __init__.py  benchmark.py  cli.py  cli_batch.py  core.py
dingo_waveform/compression/: __init__.py  svd.py
dingo_waveform/dataset/: __init__.py  cli.py  compression_settings.py  dataset_settings.py  generate.py  generation_types.py  polarizations.py  sampler.py  settings.py  waveform_dataset.py  waveform_generator_settings.py
dingo_waveform/domains/: __init__.py  domain.py  frequency_base.py  frequency_domain.py  multibanded_frequency_domain.py  time_domain.py
dingo_waveform/plotting/: __init__.py  cli.py  converters.py  mode_plots.py  polarization_plots.py
dingo_waveform/polarization_functions/: __init__.py  generate_FD_modes.py  generate_TD_modes.py  gwsignal_generateFDWaveform.py  gwsignal_generateTDWaveform.py  gwsignals_generateFDWaveform.py  gwsignals_generateTDWaveform.py  inspiral_FD.py  inspiral_TD.py  lalsimulation_simInspiralFD.py  lalsimulation_simInspiralTD.py
dingo_waveform/polarization_modes_functions/: __init__.py  generate_FD_modes_LO.py  generate_TD_modes_LO.py  generate_TD_modes_LO_cond_extra_time.py  generate_TF_modes_LO_cond_extra_time.py  gwsignal_generateFDModes.py  gwsignal_generateTDModes.py  gwsignal_generateTDModes_SEOBNRv5.py  gwsignals_generateFDModes.py  gwsignals_generateTDModes.py  gwsignals_generateTDModes_SEOBNRv5.py  inspiral_choose_FD_modes.py  inspiral_choose_TD_modes.py  lalsimulation_simInspiralChooseFDModes.py  lalsimulation_simInspiralChooseTDModes.py  polarization_modes_utils.py
dingo_waveform/svd/: README.md  __init__.py  __version__.py  basis.py  compression.py  config.py  decomposition.py  io.py  parallel.py  results.py  transforms.py  utils.py  validation.py
dingo_waveform/tmp/: compare.py  run.py
dingo_waveform/transform/: __init__.py  base.py  compose.py  config_types.py  data_transform.py  detector.py  factory.py  general.py  gnpe.py  inference.py  noise.py  parameters.py  svd_transform.py  transform.py  types.py  utils.py  waveform.py  whitening_transform.py
dingo_waveform/transforms/: __init__.py  base.py  svd_transform.py  whitening.py
docs/: README.md  index.md
docs/api/: approximants.md  dataset.md  domains.md  plotting.md  polarizations.md  waveform-generator.md
docs/cli/: dingo-generate-dataset.md  dingo-plot.md  dingo-verify.md
docs/concepts/: approximants.md  domains.md  overview.md  polarizations.md
docs/examples/: basic-waveform.md  dataset-generation.md  mode-separated.md  plotting.md
docs/getting-started/: installation.md  quickstart.md
examples/: BENCHMARK_README.md  README.md  README_MULTIBANDED_FORMATS.md  SVD_VERIFICATION.md  benchmark_mfd_simple.yaml  benchmark_multibanded.json  benchmark_multibanded.yaml  benchmark_production.json  benchmark_quick.json  benchmark_seobnrv5.yaml  config_multibanded.json  config_svd.json  config_svd_small.json  config_svd_small.yaml  config_uniform.json
examples/configs/: README.md  advanced_seobnrv4phm.yaml  basic_multibanded_frequency.yaml  basic_uniform_frequency.yaml  dataset_multibanded_imrphenomxphm.yaml  dataset_multibanded_simple.yaml  dataset_production_imrphenomxphm.yaml  dataset_quick_imrphenomd.yaml  generate_basic_waveform.py  generate_dataset_example.py  generate_modes.py  generate_with_svd.py  modes_imrphenomxphm.yaml  svd_compression_full.yaml
examples/plotting/: README.md  config_basic_frequency.yaml  config_high_mass.yaml  config_modes.yaml  config_multibanded.yaml  config_precessing.yaml  plot_basic_waveform.py  plot_comparison.py  (+2 more)
notebooks/: waveform_generator.py
site/: 404.html  index.html  objects.inv
tests/: test_adaptive_binning.py  test_approximants.py  test_build_waveform_generator.py  test_compare.py  test_compare_ground_truth.py  test_compression_integration.py  test_coverage_improvements.py  test_dataset_compare_dingo.py  test_dataset_generation.py  test_dingo_compatibility.py  test_extended_coverage.py  test_frequency_domain.py  test_imports.py  test_mfd_decimation.py  test_mfd_decimation_old.py  test_multibanded_frequency_domain.py  test_priors.py  test_sampler.py  test_svd.py  test_transform_types.py  test_transforms.py  test_waveform_generator.py  test_wfg.py  test_wfg_m.py
(+65 files in other folders)
